cabal-version:       2.2
name:                advent2018
version:             0.1.0.0
synopsis:            Advent of Code 2018 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2018 Eric Mertens
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Advent
  build-depends:       base       >=4.11 && <4.13,
                       containers >=0.5  && <0.7,
                       megaparsec >=7.0  && <8.0,
                       vector     >=0.12 && <0.13,
  hs-source-dirs:      common
  default-language:    Haskell2010

executable Day01
  main-is:             Day01.hs
  build-depends:       advent2018, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day02
  main-is:             Day02.hs
  build-depends:       advent2018, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day03
  main-is:             Day03.hs
  build-depends:       advent2018, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day04
  main-is:             Day04.hs
  build-depends:       advent2018, time, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day05
  main-is:             Day05.hs
  build-depends:       advent2018, base
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day06
  main-is:             Day06.hs
  build-depends:       advent2018, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day07
  main-is:             Day07.hs
  build-depends:       advent2018, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day08
  main-is:             Day08.hs
  build-depends:       advent2018, base, yoctoparsec == 0.1.*
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day09
  main-is:             Day09.hs
  build-depends:       advent2018, base, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day10
  main-is:             Day10.hs
  build-depends:       advent2018, base, containers, megaparsec
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day11
  main-is:             Day11.hs
  build-depends:       advent2018, base, array, loops
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day12
  main-is:             Day12.hs
  build-depends:       advent2018, base, megaparsec, vector
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day13
  main-is:             Day13.hs
  build-depends:       advent2018, base, array, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day14
  main-is:             Day14.hs
  build-depends:       advent2018, base, lens, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day15
  main-is:             Day15.hs
  build-depends:       advent2018, base, vector, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day16
  main-is:             Day16.hs
  build-depends:       advent2018, base, megaparsec, containers, transformers
  hs-source-dirs:      execs
  default-language:    Haskell2010

executable Day17
  main-is:             Day17.hs
  build-depends:       advent2018, base, array, containers
  hs-source-dirs:      execs
  default-language:    Haskell2010

-- executable Day14
--   main-is:             Day14.hs
--   build-depends:       advent2018, base, array, loops, megaparsec, lens, vector, containers, yoctoparsec, split
--   hs-source-dirs:      execs
--   default-language:    Haskell2010
