project('advent-2018', 'cpp',
  version : '0.1',
  license : 'ISC',
  default_options : ['warning_level=3', 'cpp_std=c++17'])

executable('Day01', 'Day01.cpp', install : true)
executable('Day02', 'Day02.cpp', install : true)
executable('Day03', 'Day03.cpp', install : true)
executable('Day05', 'Day05.cpp', install : true)